ssh and ags improvements

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -47,7 +47,7 @@ bind = $mainMod CONTROL, down,  resizeactive, 0 10
 # layout
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit
-bind = $mainMod, F, fullscreen
+# bind = $mainMod, F, fullscreen
 bind = $mainMod, T, togglefloating, 
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
