--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-source = $HOME/.cache/wal/colors-hyprland
+#source = $HOME/.cache/wal/colors-hyprland
 
 exec-once = ~/.config/hypr/scripts/resetxdgportal.sh # reset XDPH for screenshare
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
