--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -47,10 +47,12 @@ bind = $mainMod CONTROL, down,  resizeactive, 0 10
 # layout
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit
-# bind = $mainMod, F, fullscreen
+bind = ALT, Return, fullscreen
 bind = $mainMod, T, togglefloating, 
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
+bind = ALT, Tab, cyclenext,
+bind = ALT SHIFT, Tab, layoutmsg, cycleprev,
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
