implement weather widget

--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -1,6 +1,7 @@
 layerrule = blur, ^(.*)$
 layerrule = ignorealpha 0.2, ^(.*)$
 
-windowrule = workspace 10, thunderbird
-windowrule = workspace 9, VencordDesktop
+windowrulev2 = workspace 10, class:^(thunderbird)$
+windowrulev2 = workspace 9, class:^(VencordDesktop)$
+windowrulev2 = workspace 8, title:^(Youtube Music)$
 windowrule=opacity 0.5 override 0.5 override, class:^(thunar)$ 
