update weather and swaylock

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -9,7 +9,7 @@ bind = CTRL SHIFT, R, exec, ags -b hypr quit; ags -b hypr # restart ags
 bind = $mainMod, A, exec, ags -b hypr -t applauncher
 bind = $mainMod, BACKSPACE, exec, ags -b hypr -t powermenu
 bind = $mainMod, TAB, exec, ags -b hypr -t overview
-
+bind = $mainMod, L, exec, swaylock
 # screenshot stuff
 bind = , Print, exec, ags -b hypr -r 'recorder.screenshot()'
 bind = SHIFT, Print, exec, ags -b hypr -r 'recorder.screenshot(true)'
@@ -17,14 +17,12 @@ bind = SHIFT, Print, exec, ags -b hypr -r 'recorder.screenshot(true)'
 # function keys
 bindl = ,XF86MonBrightnessUp,   exec, ags -b hypr -r 'brightness.screen += 0.05; indicator.display()'
 bindl = ,XF86MonBrightnessDown, exec, ags -b hypr -r 'brightness.screen -= 0.05; indicator.display()'
-bindl = ,XF86KbdBrightnessUp,   exec, ags -b hypr -r 'brightness.kbd++; indicator.kbd()'
-bindl = ,XF86KbdBrightnessDown, exec, ags -b hypr -r 'brightness.kbd--; indicator.kbd()'
 bindl = ,XF86AudioRaiseVolume,  exec, ags -b hypr -r 'audio.speaker.volume += 0.05; indicator.speaker()'
 bindl = ,XF86AudioLowerVolume,  exec, ags -b hypr -r 'audio.speaker.volume -= 0.05; indicator.speaker()'
-bindl = ,XF86AudioPlay,    exec, ags -b hypr -r 'mpris?.playPause()'
-bindl = ,XF86AudioStop,    exec, ags -b hypr -r 'mpris?.stop()'
-bindl = ,XF86AudioPause,   exec, ags -b hypr -r 'mpris?.playPause()'
-bindl = ,XF86AudioPrev,    exec, ags -b hypr -r 'mpris?.previous()'
+bindl = ,XF86AudioPlay, exec, ags -b hypr -r 'mpris?.playPause()'
+bindl = ,XF86AudioStop, exec, ags -b hypr -r 'mpris?.stop()'
+bindl = ,XF86AudioPause, exec, ags -b hypr -r 'mpris?.playPause()'
+bindl = ,XF86AudioPrev, exec, ags -b hypr -r 'mpris?.previous()'
 bindl = ,XF86AudioNext, exec, ags -b hypr -r 'mpris?.next()'
 bindl = ,XF86AudioMicMute, exec, ags -b hypr -r 'audio.microphone.isMuted = !audio.microphone.isMuted'
 
@@ -39,15 +37,15 @@ bind = $mainMod SHIFT, right, movewindow, r
 bind = $mainMod SHIFT, up, movewindow, u
 bind = $mainMod SHIFT, down, movewindow, d
 
-bind = $mainMod CONTROL, left,  resizeactive, -10 0
+bind = $mainMod CONTROL, left, resizeactive, -10 0
 bind = $mainMod CONTROL, right, resizeactive, 10 0
-bind = $mainMod CONTROL, up,    resizeactive, 0 -10
-bind = $mainMod CONTROL, down,  resizeactive, 0 10
+bind = $mainMod CONTROL, up, resizeactive, 0 -10
+bind = $mainMod CONTROL, down, resizeactive, 0 10
 
 # layout
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit
-bind = ALT, Return, fullscreen
+bind = ALT , Return, fullscreen
 bind = $mainMod, T, togglefloating, 
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
@@ -85,5 +83,3 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-
