--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -24,6 +24,7 @@ bindl = ,XF86AudioStop, exec, ags -b hypr -r 'mpris?.stop()'
 bindl = ,XF86AudioPause, exec, ags -b hypr -r 'mpris?.playPause()'
 bindl = ,XF86AudioPrev, exec, ags -b hypr -r 'mpris?.previous()'
 bindl = ,XF86AudioNext, exec, ags -b hypr -r 'mpris?.next()'
+bindl = ,XF86AudioMute, exec, ags -b hypr -r 'audio.isMuted = !audio.isMuted'
 bindl = ,XF86AudioMicMute, exec, ags -b hypr -r 'audio.microphone.isMuted = !audio.microphone.isMuted'
 
 # Move focus with mainMod + arrow keys
