--- a/hypr/environment.conf
+++ b/hypr/environment.conf
@@ -1,4 +1,4 @@
-#environment-variables
+S#environment-variables
 env = CLUTTER_BACKEND,wayland
 env = GDK_BACKEND,wayland,x11
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
