--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,5 @@
-include ~/.cache/wal/colors-kitty.conf
+ include ~/.cache/wal/colors-kitty.conf
+# include ~/.config/kitty/colors.conf
 
 font_family 	Iosevka NF
 font_size 		14.0
