--- a/hypr/environment.conf
+++ b/hypr/environment.conf
@@ -6,7 +6,7 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt5ct  
 env = QT_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_CURRENT_DESKTOP,gnome
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 
