--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -3,5 +3,10 @@ layerrule = ignorealpha 0.2, ^(.*)$
 
 windowrulev2 = workspace 10, class:^(thunderbird)$
 windowrulev2 = workspace 9, class:^(VencordDesktop)$
-windowrulev2 = workspace 8, title:^(Youtube Music)$
-windowrule=opacity 0.5 override 0.5 override, class:^(thunar)$ 
+windowrulev2 = workspace 8, title:^(Cider)$
+windowrulev2 = workspace 3, title:^(Lutris)$
+
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
